[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/PlayerCraft.png" type="Texture" id=1]
[ext_resource path="res://res/Piedra-Regular-MainMenu.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=3]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Stars" type="CPUParticles2D" parent="."]
position = Vector2( 640, 360 )
z_index = -1
amount = 100
lifetime = 4.0
preprocess = 1.0
speed_scale = 0.2
randomness = 1.0
lifetime_randomness = 1.0
fixed_fps = 30
emission_shape = 2
emission_rect_extents = Vector2( 640, 360 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
scale_amount = 2.0
color = Color( 0.968627, 0.917647, 0.505882, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="ButtonsCenter" type="Node2D" parent="."]
position = Vector2( 640, 460 )

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonsCenter"]
margin_left = -50.0
margin_top = -74.0
margin_right = 50.0
margin_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 500, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="ButtonsCenter/VBoxContainer"]
margin_right = 500.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 2 )
text = "Play"
expand_icon = true

[node name="Details" type="Button" parent="ButtonsCenter/VBoxContainer"]
margin_top = 76.0
margin_right = 500.0
margin_bottom = 148.0
custom_fonts/font = ExtResource( 2 )
text = "Details"

[node name="Credits" type="Button" parent="ButtonsCenter/VBoxContainer"]
margin_top = 152.0
margin_right = 500.0
margin_bottom = 224.0
custom_fonts/font = ExtResource( 2 )
text = "Credits"

[node name="ExitButton" type="Button" parent="ButtonsCenter/VBoxContainer"]
margin_top = 228.0
margin_right = 500.0
margin_bottom = 300.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"

[node name="GameTitle" type="Sprite" parent="."]
position = Vector2( 640, 160 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
[connection signal="button_up" from="ButtonsCenter/VBoxContainer/PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="ButtonsCenter/VBoxContainer/Details" to="." method="_on_Details_button_up"]
[connection signal="button_up" from="ButtonsCenter/VBoxContainer/Credits" to="." method="_on_Credits_button_up"]
[connection signal="button_up" from="ButtonsCenter/VBoxContainer/ExitButton" to="." method="_on_ExitButton_button_up"]
